--- a/public/css/recomendacao.css
+++ b/public/css/recomendacao.css
@@ -15,12 +15,8 @@ nav{
     margin-top: 10px;
     margin-bottom: 7px;
 }
-#library{
+#recomendacao{
     background-color: #6558f5;
-}
-#geral{
-    margin: 0% 16% ;
-    border: 0.7px solid #6558f5;
 }
 #pag{
     background-color: #c3cfd9;
@@ -28,12 +24,6 @@ nav{
     width: 100%;
     height: 85%;
     margin: auto;
-}
-#search{
-    margin: 1% 2% 2% 68%;
-    border-radius: 7px;
-    width: 130px;
-    height: 35px;
 }
 #button{
     font-family: Bahnschrift;
@@ -50,7 +40,17 @@ nav{
     margin: auto;
     background-color: white;
 }
+#search{
+    margin: 1% 2% 2% 68%;
+    border-radius: 7px;
+    width: 130px;
+    height: 35px;
+}
 #pulo{
     margin-left: 8px;
     margin-bottom: 8px;
+}
+#geral{
+    margin: 0% 16% ;
+    border: 0.7px solid #6558f5;
 }
