--- a/public/css/biblioteca.css
+++ b/public/css/biblioteca.css
@@ -1,4 +1,10 @@
 @charset "UFT-8";
+*
+{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 nav > a{
     text-decoration: none;
@@ -15,11 +21,14 @@ nav{
     margin-top: 10px;
     margin-bottom: 7px;
 }
+body{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 #library{
     background-color: #6558f5;
 }
 #geral{
-    margin: 0% 16% ;
+    margin: 0% 10% ;
     border: 0.7px solid #6558f5;
 }
 #pag{
@@ -35,7 +44,7 @@ nav{
     width: 130px;
     height: 35px;
 }
-#button{
+.button{
     font-family: Bahnschrift;
     font-size: 15px;
     background-color: #4b5c6b;
@@ -45,12 +54,32 @@ nav{
     margin: 10px;
     border-radius: 7px;
 }
-#book{
-    border: 0.5px solid black;
-    margin: auto;
-    background-color: white;
+.content{
+    justify-content: center;
+    align-items: center;
+    align-content: content;
+    width: 100%;
+    height: 100%;
 }
-#pulo{
-    margin-left: 8px;
-    margin-bottom: 8px;
+.card{
+    background: #FFF;
+    box-shadow: 8px 2px 18px #6558f5;
+    border-radius: 20px;
+    width: 500px;
+    height: 450px;
+    margin: 10px;
+    padding: 20px;
+}
+.mediaCard{
+    background: center/cover;
+    height: 300px;
+    width: 100px;
+    display:flex;
+    flex-direction:column;
+}
+.topCard{
+    padding-bottom: 15px;
+}
+.bottomCard{
+    padding: 20px;
 }
