--- a/public/css/biblioteca.css
+++ b/public/css/biblioteca.css
@@ -11,7 +11,7 @@ nav > a{
     font-size: 20px;
     border: solid;
     border-radius: 3px;
-    padding: 7px 58px;
+    padding: 7px 58.4px;
     font-weight: bolder;
 }
 nav > a:hover{
@@ -31,12 +31,17 @@ body{
     margin: 0% 14% ;
     border: 0.7px solid #6558f5;
 }
+#pesquisa{
+    background: #D4D1FA;
+}
 #pag{
     background-color: #c3cfd9;
     border: 0.5px solid black;
     width: 100%;
     height: 85%;
     margin: auto;
+    display: flex;
+    flex-wrap: wrap;
 }
 #search{
     margin: 1% 2% 2% 68%;
@@ -54,15 +59,6 @@ body{
     margin: 10px;
     border-radius: 7px;
 }
-.content{
-    justify-content: center;
-    align-items: center;
-    align-content: content;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-wrap: wrap;
-}
 .card{
     background: #FFF;
     box-shadow: 8px 2px 18px #6558f5;
@@ -73,6 +69,7 @@ body{
     padding: 20px;
     position: relative;
     overflow: hidden;
+    margin-left: 120px;
 }
 .title{
     padding-bottom:15px;
