--- a/public/css/perfil.css
+++ b/public/css/perfil.css
@@ -39,7 +39,7 @@ nav{
     font-family: Arial Narrow;
 }
 #nome{
-    margin-left: 38%;
+    text-align: center;
     font-family: Comic Sans Ms;
 }
 #list{
@@ -62,7 +62,8 @@ img{
     width:150px;
     height:90;
     margin-left: 20px;
+    border-radius: 15px;
 }
 p{
-    margin-left:20px;
+    margin-left:60px;
 }
